--- a/css/startpage.css
+++ b/css/startpage.css
@@ -17,27 +17,34 @@ body, .startpage {
     font-family: 'Open sans', sans-serif;
 }
 
-button {
-	margin: 0 auto;
-	padding: 20px;
-	background-color: transparent;
-	border: 2px solid #AE9266;
-	width: 40%;
-	position: relative;
-	margin-left: 30%;
-	margin-right: 30%;
-	color: #AE9266;
-	text-transform: uppercase;
-    text-decoration: none;
-    cursor: pointer;
+/******* Css för toppbild ************/
+
+.startpage {
+    width: 100%;
+    height: auto;
+    margin: auto;
 }
 
-button:hover {
-    background-color: #AE9266;
-    border: none;
-    color: white;
+.startpage_bigimage {
+    width: 100%;
+    height: 100vh;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 25px;
+    position: relative;
+    z-index: -1;
+    margin-top: -100px; /* För att ta bort extra px från menyn*/
 }
 
+.topimage {
+    max-width: 100%;
+    max-height: 100vh;
+    object-fit: cover;
+}
+
+/* Upptäck din nischdoft-button */
 #create {
     margin: 0 auto;
     padding: 30px;
@@ -45,40 +52,44 @@ button:hover {
     border: 2px solid white;
     width: 30%;
     position: absolute;
-    top: 45%;
+    top: 50%;
     right: 0%;
     left: 0%;
 
     color: white;
-    text-transform: uppercase;
     font-size: 20px;
     text-decoration: none;
     cursor: pointer;
+    letter-spacing: 3px;
+    font-size: 25px;
 }
 
 #create:hover {
     color: #f0bb29;
 }
 
-.start-cat-button:visited{
-    text-decoration: none;
-}
-
-h2.our-favorites {
+/* Rubrik Damdofter | Profumi Donna */
+h2.damdofter {
     text-align: center;
-    text-transform: uppercase;
     margin-top: 40px;
-    color: #5a5752;
+    margin-bottom: 40px;
+    color: #000000;
 }
 
-
-h3 {
-    color: #5a5752;
+/* Namnet på parfymerna */
+h3.parfymnamn {
+    color: #ffffff;
     text-decoration: none;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
-    text-transform: uppercase;
+    margin-top: -15%;
+}
 
+/* Priset på parfymerna */
+p.price {
+    color: grey;
+    margin-top: -2%;
+    margin-bottom: 5%;
 }
 
 .start_cat, .start_prod{
@@ -90,19 +101,85 @@ h3 {
     margin: 0 auto;
 }
 
+/* Bilder på parfymerna */
 .product_wrapper img {
-    width: 70%;
-    margin-left:15%;
-    margin-right: 15%;
+    width: 100%;
+    padding-right: 1%;
+    border: 2px solid white;
 }
 
 .product_wrapper p, h3 {
     text-align: center;
 }
 .category_wrapper, .product_wrapper  {
-    width: 30%;
+    width: 100%;
     position: relative;
 }
+
+
+/* CSS för Ansök om medlemsskap hos Granza */
+#ansok-granza {
+    width: 100%;
+    height: 500px;
+    background-color: #D4A80E; 
+    margin-top: 5%;
+    display: flex;
+}
+
+.placement-left {
+    width: 40%;
+    padding-left: 5%;
+    flex: 1;
+}
+
+img.orange {
+    width: 600px;
+    height: 781px;
+    margin-top: -8%;
+    position: absolute;
+}
+
+img.rockrose {
+    width: 240px;
+    height: 240px;
+    position: absolute;
+    left: 27%;
+    margin-top: 5%;
+}
+
+img.junpierberry {
+    width: 400px;
+    height: 250px;
+    position: absolute;
+    left: 16%;
+    margin-top: 12%;
+}
+
+.placement-right {
+    width: 50%;
+    color: white;
+    text-align: center;
+    margin-top: 10%;
+    flex: 0 0 60%; 
+}
+
+/* knapp */
+#ansok-medlemsskap {
+    margin: 0 auto;
+    padding: 10px;
+    background-color: transparent;
+    border: 2px solid white;
+    color: white;
+    font-size: 13px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#ansok-medlemsskap:hover { 
+    color: black;
+    background-color: white;
+}
+
 
 /******* CSS FÖR KATEGORIBILDERNA ************/
 
@@ -142,231 +219,6 @@ h3 {
     filter: blur(2px);
 }
 
-
-
-/******* ALL CSS FÖR TOPBILD ************/
-
-.startpage {
-    width: 100%;
-    height: auto;
-    margin: auto;
-}
-
-.startpage_bigimage {
-    width: 100%;
-    height: 600px;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-bottom: 25px;
-    position: relative;
-}
-
-.topimage {
-    max-width: 100%;
-    max-height: 600px;
-    object-fit: cover;
-}
-
-.buttonContainer {
-    position: absolute;
-    display: flex;
-    flex-direction: row;
-    left: 50%;
-    bottom: 0;
-    margin-left: -42px;
-}
-
-.buttons {
-    border-radius: 50%;
-    border: 2px solid rgba(174,146, 102, 1);
-    width: 7px;
-    height: 7px;
-    margin: 5px;
-}
-
-.buttonActive {
-    background-color: rgba(174,146, 102, 1);
-}
-
-
-/* CSS för Ansök om medlemsskap */
-#ansok-granza {
-    width: 100%;
-    height: 380px;
-    background-color: #D4A80E; 
-    margin-top: 5%;
-    display: flex;
-}
-
-.placement-left {
-    width: 40%;
-    padding-left: 5%;
-    flex: 1;
-}
-
-img.orange {
-    width: 600px;
-    height: 781px;
-    margin-top: -15%;
-    position: absolute;
-}
-
-img.rockrose {
-    width: 240px;
-    height: 240px;
-    position: absolute;
-    left: 30%;
-    margin-top: 3%;
-}
-
-img.junpierberry {
-    width: 400px;
-    height: 250px;
-    position: absolute;
-    left: 20%;
-    margin-top: 10%;
-}
-
-.placement-right {
-    width: 50%;
-    color: white;
-    text-align: center;
-    margin-top: 10%;
-    flex: 0 0 60%; 
-}
-
-#ansok-medlemsskap {
-    margin: 0 auto;
-    padding: 10px;
-    background-color: transparent;
-    border: 2px solid white;
-    color: white;
-    font-size: 13px;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-#ansok-medlemsskap:hover { 
-    color: black;
-    background-color: white;
-}
-
-
-
-/******* NEDAN ÄR CSS FÖR ERBJUDANDEBANNERN ************/
-
-#offer-banner {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-}
-.banner-img {
-    max-height: 400px;
-    width: 50%;
-}
-
-#banner-text {
-    width: 50%;
-    background-color: rgba(174,146, 102, 1);
-    opacity: 0.9;
-}
-#banner-title {
-    color: white;
-    font-size: 45px;
-    width: 90%;
-    margin: 0 auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
-}
-
-.banner-p {
-    color: white;
-    max-width: 70%;
-    margin: 0 auto;
-}
-
-.banner-p:first-of-type {
-    margin-bottom: 50px;
-}
-
-#offer-link {
-    height: 40px;
-    border: 3px solid white;
-    width: 45%;
-    margin: 0 auto;
-}
-
-#offer-link > .banner-p {
-    padding-top: 8px;
-    font-size: 18px;
-}
-
-#banner-a {
-    color: white;
-}
-
-/******* NEDAN ÄR CSS FÖR NYHETSBREVBANNER ************/
-
-#newsletter-wrapper {
-    background-color: rgba(174,146, 102, 1);
-    opacity: 0.9;
-    height: 300px;
-    width: 100%;
-    margin-bottom: 50px;
-    display: hidden;
-}
-
-#newsletter-h3 {
-    text-align: center;
-    color: white;
-    font-size: 30px;
-    padding-top: 20px;
-    font-family: 'Open sans';
-}
-
-#newsletter-p {
-    text-align: center;
-    color: white;
-    width: 70%;
-    margin: 0 auto;
-    text-transform: none;
-} 
-
-#newsletter-input {
-    width: 50%;
-    margin: 0 auto;
-    border: 0;
-    height: 30px;
-    margin-top: 55px;
-    margin-bottom: 20px;
-    display: block;
-    padding-left: 10px;
-}
-
-#newsletter-submit {
-    margin: 0 auto;
-    padding: 15px;
-    background-color: #AE9266;
-    border: 2px solid white;
-    width: 35%;
-    position: relative;
-    margin-left: 33%;
-    margin-right: 33%;
-    color: white;
-    text-transform: uppercase;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-#newsletter-submit:hover {
-    color: #AE9266;
-    background-color: white;
-}
 
 /******* MEDIA QUERIES FÖR SKÄRM < 950px ************/
 
