--- a/css/startpage.css
+++ b/css/startpage.css
@@ -17,6 +17,15 @@ body {
     font-family: 'Open sans', sans-serif;
 }
 
+.goodstuff {
+    width: 100%;
+    background-color: #f0bb29;
+    text-align: center;
+    color: white;
+    padding: 0.5%;
+    font-size: 10px;
+}
+
 .startpage {
     width: 100%;
     max-width: 2880px;
@@ -27,7 +36,7 @@ body {
 /* Css för toppbild */
 .startpage_bigimage {
     width: 100%;
-    height: 100vh;
+    height: 800px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -40,7 +49,7 @@ body {
 
 .topimage {
     max-width: 100%;
-    max-height: 100vh;
+    max-height: 800px;
     object-fit: cover;
 }
 
