--- a/css/footer.css
+++ b/css/footer.css
@@ -30,11 +30,11 @@ jämnt mellan dessa och ger perfekt margin. */
 }
 
 p.granza-foooter-text {
-    font-size: 12px;
+    font-size: 13px;
     color: white;
     text-align: left;
-    padding-top: 4%;
-    padding-bottom: 4%;
+    padding-top: 10%;
+    padding-bottom: 10%;
     margin-left: 15%;
     margin-right: 15%;
 }
@@ -45,9 +45,9 @@ p.granza-foooter-links {
     color: white;
     text-transform: uppercase;
     text-align: left;
-    padding-top: 4%;
+    padding-top: 10%;
     padding-left: 25%;
-    padding-bottom: 4%;
+    padding-bottom: 10%;
     margin-left: 15%;
     margin-right: 15%;
 }
@@ -61,4 +61,10 @@ p.granza-foooter-links a:hover {
     font-size: 10px;
     text-align: center;
     margin-top: 2px;
+}
+
+img#footerimg {
+    width: 55%;
+   margin-left: 20%;
+   margin-top: -20%;
 }
