--- a/css/startpage.css
+++ b/css/startpage.css
@@ -10,6 +10,7 @@
   font-style: normal;
 }
 
+/* Allmänna inställningar */
 body {
     width: 100%;
     margin: 0 auto;
@@ -17,7 +18,8 @@ body {
     font-family: 'Open sans', sans-serif;
 }
 
-.goodstuff {
+/* Liten gul banner under headern */
+.small_banner {
     width: 100%;
     background-color: #f0bb29;
     text-align: center;
@@ -26,6 +28,7 @@ body {
     font-size: 10px;
 }
 
+/* Omsluter allt innehåll */
 .startpage {
     width: 100%;
     max-width: 2880px;
@@ -36,7 +39,7 @@ body {
 /* Css för toppbild */
 .startpage_bigimage {
     width: 100%;
-    height: 800px;
+    height: 950px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -44,24 +47,24 @@ body {
     /*margin-bottom: 25px;*/
     position: relative;
     z-index: -1;
-    margin-top: -100px; /* För att ta bort extra px från menyn*/
+    margin-top: -220px; /* För att ta bort extra px från menyn*/
 }
 
 .topimage {
     max-width: 100%;
-    max-height: 800px;
+    max-height: 950px;
     object-fit: cover;
 }
 
 /* Upptäck din nischdoft-button */
-#create {
+button#create {
     margin: 0 auto;
     padding: 30px;
     background-color: transparent;
     border: 2px solid white;
     width: 30%;
     position: absolute;
-    top: 50%;
+    top: 55%;
     right: 0%;
     left: 0%;
 
@@ -71,14 +74,11 @@ body {
     cursor: pointer;
     letter-spacing: 2px;
     font-size: 25px;
-}
-
-#create:hover {
-    color: #f0bb29;
+    z-index: 4;
 }
 
 /* Rubrik Damdofter | Profumi Donna */
-h2.damdofter {
+h2.headline_gender {
     text-align: center;
     color: #000000;
     padding: 2%;
@@ -86,7 +86,7 @@ h2.damdofter {
 }
 
 /* Namnet på parfymerna */
-h3.parfymnamn {
+h3.perfume_name {
     color: #ffffff;
     text-decoration: none;
     font-family: 'Open Sans', sans-serif;
@@ -110,7 +110,7 @@ p.price {
     margin: 0 auto;
 }
 
-/* Bilder på parfymerna */
+/* Bilder på parfymer */
 .product_wrapper img {
     width: 100%;
     padding-right: 1%;
@@ -125,7 +125,7 @@ p.price {
     position: relative;
 }
 
-/* knapp för läs mer om varje parfym */
+/* Knapp för lägg i varukorg */
 button {
     margin: 0 auto;
     padding: 20px;
@@ -152,47 +152,11 @@ button:hover {
     -moz-transition: background-color 1s ease-out;
     -o-transition: background-color 1s ease-out;
     transition: background-color 1s ease-out;
-
 }
 
-
-
-
-/* Till startsidan, nästan identisk med footer - ta ej bort - provar lösningar */ 
-
-.squares {
-    width: 50%; /* Definiera storlek på dem */
-}
-
-.wrapp {
-    display: flex; /* Sätter dem horisontellt */
-}
-
-.parfymwrap {
-    justify-content: space-between; /* Ger jämn margin */
-}
-
-.eq2:nth-of-type(odd) {
-    border-right: 1px white solid; /* Enbart för ramens skull */
-    background-color: blue;
-    height: 700px;
-    margin-top: -5%;
-    z-index: -2;
-}
-
-.eq2:nth-of-type(even) {
-    border-right: 1px white solid; /* Enbart för ramens skull */
-    background-color: red;
-    height: 500px;
-
-}
-
-
-
-
-
-/* CSS för Ansök om medlemsskap hos Granza */
-#ansok-granza {
+/* CSS för ansök om medlemsskap hos Granza 
+Uppdelad i två block, en med bildkollage och en med bara text */
+#register_member {
     width: 100%;
     height: 480px;
     background-color: #D4A80E; 
@@ -202,44 +166,26 @@ button:hover {
 
 .placement-left {
     width: 40%;
-    padding-left: 15%;
+    padding-left: 10%;
     flex: 1;
 }
 
-img.orange {
-    width: 600px;
-    height: 781px;
-    margin-top: -8%;
-    position: absolute;
-}
-
-img.rockrose {
-    width: 240px;
-    height: 240px;
-    position: absolute;
-    left: 37%;
-    margin-top: 5%;
-}
-
-img.junpierberry {
-    width: 400px;
-    height: 250px;
-    position: absolute;
-    left: 27%;
-    margin-top: 12%;
+.kollage1 {
+    width: 145%;
+    padding-top: 8%;
 }
 
 .placement-right {
     width: 50%;
     color: white;
     text-align: center;
-    margin-top: 10%;
+    margin-top: 12%;
     margin-right: 5%;
     flex: 0 0 60%; 
 }
 
-/* knapp */
-#ansok-medlemsskap {
+/* knapp för att ansöka */
+button#ansok {
     margin: 0 auto;
     padding: 10px;
     background-color: transparent;
@@ -248,13 +194,59 @@ img.junpierberry {
     font-size: 13px;
     text-decoration: none;
     cursor: pointer;
+    width: 25%;
 }
 
-#ansok-medlemsskap:hover { 
+#ansok:hover { 
     color: black;
     background-color: white;
 }
 
+/* Alla parfymer */
+.discover_men {
+    position: relative; 
+}
+
+.discover_men > img {
+    width: 100%;
+}
+
+p.all_men {
+    position: absolute;
+    top: 50%;
+    left: 65%;
+
+    color: white;
+    text-transform: uppercase;
+    font-size: 30px;
+    font-family: lato;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+
+/* Kreativ ruta under herrdofter */
+#philosophy {
+    width: 100%;
+    height: 480px;
+    background-color: #2A4128; 
+    text-align: center;
+}
+
+#leafs {
+    width: 15%;
+    margin: 0 auto;
+}
+
+p.thephilosophy {
+    width: 100%;
+    color: white;
+    font-size: 23px;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    letter-spacing: 1.5px;
+    margin-top: -1%;
+}
 
 /******* CSS FÖR KATEGORIBILDERNA ************/
 
