--- a/css/startpage.css
+++ b/css/startpage.css
@@ -25,7 +25,7 @@ body {
     text-align: center;
     color: white;
     padding: 0.5%;
-    font-size: 10px;
+    font-size: 12px;
 }
 
 /* Omsluter allt innehåll */
@@ -222,6 +222,23 @@ p.all_men {
     font-family: lato;
     font-weight: 700;
     letter-spacing: 1px;
+}
+
+.arrow-right {
+  width: 0; 
+  height: 0; 
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  
+  border-left: 20px solid white;
+  position: absolute;
+  top: 68%;
+  left: 65%;
+}
+
+.arrow-right:hover {
+      border-left: 20px solid #2A4128;
+
 }
 
 /* Kreativ ruta under herrdofter */
