--- a/css/category.css
+++ b/css/category.css
@@ -1,28 +1,102 @@
 * {
 	margin: 0;
 	box-sizing: border-box;
+	font-family: 'Lato';
 }
 
+/* Kategoribild */
 .cat_img {
-object-fit: cover;
+	object-fit: cover;
     width: 100%;
-	height: 200px;
+	height: 500px;
+	margin-bottom: 2%;
 }
 
-.category_banner {
-    width: 100%;
+
+
+
+
+
+
+
+
+/* Namnet på parfymerna */
+h3.perfume_name {
+    color: white;
+    text-decoration: none;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    margin-top: -22%;
+    z-index: 999999;
+    text-transform: uppercase;
 }
 
+/* Priset på parfymerna */
+p.price {
+    color: white;
+    margin-top: 2.5%;
+    margin-bottom: 3%;
+    z-index: 9999999;
+    text-align: center;
+
+} 
+
+/* Hover effekt med zoom 
+.product_wrapper img:hover {
+    transition: all 200ms ease-in-out;
+    -moz-transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    z-index: 1;
+}*/
+
+/* Knapp för lägg i varukorg */
+button {
+    margin: 0 auto;
+    padding: 20px;
+    margin-bottom: 2%;
+    background-color: transparent;
+    width: 100%;
+    position: relative;
+    background: #f0bb29;
+
+
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    cursor: pointer;
+    z-index: 1;
+    border: none;
+}
+
+button:hover {
+    color: white;
+    z-index: 1;
+    cursor: pointer;
+    -webkit-transition: background-color 1s ease-out;
+    -moz-transition: background-color 1s ease-out;
+    -o-transition: background-color 1s ease-out;
+    transition: background-color 1s ease-out;
+}
+
+/* Storlek på varje parfymbild i helskärm */
+.product_wrapper {
+	width: 24.5%;
+}
+
+/* Beskrivande text om Profumi Donna */
 .category_banner_text {
     margin: 0 auto;
-	width: 90%;
-	padding-bottom: 10px;
+	width: 100%;
+	padding-bottom: 4%;
 	padding-top: 24px;
 	line-height: 1.3em;
     text-align: center;
-    max-width: 750px;
+    max-width: 900px;
 }
 
+/* Wrappern som omsluter parfymerna */
 .main_wrapper {
 	display: flex;
 	flex-direction: row;
@@ -30,23 +104,28 @@ object-fit: cover;
 	width: auto;
 	justify-content: space-between;
 	margin: 0 auto;
-	padding-bottom: 15px;
+	padding-bottom: 20%;
+	overflow: hidden;
+	margin-right: 6%;
+	margin-left: 6%;
 }
 
-.product_wrapper {
-	width: 50%;
-
-}
 
 .prod_img {
 	width: 100%;
 	display: inline-block;
 }
 
-h1 {
+/* Stor rubrik Profumi Donna */
+h1.bigheadline_category {
 	padding-bottom: 20px;
 	text-align: center;
 	text-transform: uppercase;
+	color: #5a5752;
+	font-family: 'Lato';
+}
+
+p.description {
 	color: #5a5752;
 }
 
@@ -55,54 +134,7 @@ h3 {
     color: #5a5752;
 }
 
-p.price {
-	text-align: center; 
-	padding-bottom: 10px;
-    color: #5a5752;
-}
-p.description {
-	color: #5a5752;
-}
-
-a.button-a {
-    text-decoration: none;
-    color: white;
-}
-
-a.button-a:visited {
-    color: white;
-    text-decoration: none;
-}
-
-#button {
-	margin: 0 auto;
-	padding: 15px;
-	background-color: #AE9266;
-	border: none;
-	width: 40%;
-	position: relative;
-	margin-left: 30%;
-	margin-right: 30%;
-	color: white;
-	text-transform: uppercase;
-    cursor: pointer;
-}
-
-
-/******* MEDIA QUERIES FÖR SKÄRM > 650px ************/
-@media (min-width: 650px) {
-    
-.category_banner_text {
- width: 100%;
-}
-    
-    .cat_img {
-
-	height: 300px;
-}
-      
-}
-      
+ 
 
 
 /******* MEDIA QUERIES FÖR SKÄRM > 1025px ************/
@@ -110,33 +142,6 @@ a.button-a:visited {
 @media (min-width: 1025px) {
 
 	.product_wrapper {
-	width: 30%;
+	width: 24.5%;
 	}
 	
-	h1 {
-	margin-top: 35px;
-	}
-
-	.category_banner {
-	margin: 0 auto;
-	display: flex;
-	justify-content: center;
-	}
-	.cat_img {
-		height: 400px;
-	}
-	#button {
-	width: 50%;
-	padding-top: 15px;
-	padding-bottom: 15px;
-	margin-left: 25%;
-	margin-right: 25%;
-	}
-
-	.description {
-		line-height: 1.5em;
-	}
-
-}
-
-
