--- a/css/product_single.css
+++ b/css/product_single.css
@@ -13,111 +13,125 @@
 * {
 	margin: 0;
 	box-sizing: border-box;
-    
 }
 
+/* Tillbaka knapp */
+.goback {
+    color: white;
+    text-transform: uppercase;
+    font-size: 13px;
+}
+
+/* fa fa icon */
+div.goback > i {
+    color: white;
+}
+
+/* Produktbildsdiv */
+.single_img {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+/* Egenskaper för produktbilden */
 figure {
     width: 300px;
     margin: 0 auto;
+    background: #000000;
+    position: relative;
 }
 
-.share-prod {
-    text-align: center;
-    margin: 0 auto;
-    margin-bottom: 60px;
-    width: 75%;
+/* Produktinfo div */
+div.prod_info_wrapper {
+    width: 45%;
+    position: absolute;
+    top: 25%;
+    left: 8%;
+
+    font-family: 'Lato';
 }
 
-.share-prod #fb-font, #inst-font, #pint-font, #mail-font{
-    color: #807b74;
-    font-size: 1.5em;
-    font-family: 'millhouse-prod-share';
-    margin: 5px;
-}
-
-#fb-font::before {
-    content:'\66';
-}
-
-#inst-font::before {
-    content:'\69';
-}
-
-#pint-font::before {
-    content:'\70';
-}
-
-#mail-font::before {
-    content:'\6d';
-}
-
-.single_img {
-	width: 100%;
-}
-
-hgroup> h2 {
-    padding-top: 10px;
-}
-
+/* Produkttitel från db */
 .product_title {
-	text-align: center;
 	margin-top: 15px;
 	font-size: 2em;
-	color:#5a5752;
+    letter-spacing: 1px;
+    text-align: left;
+    color: white;
+    text-transform: uppercase;
+    font-size: 30px;
 }
 
+/* Priset på produkten från db */
+.product_price {
+    font-size: 1.3em;
+    letter-spacing: 2px;
+    color: white;
+    display: table;
+    margin-top: 10px;
+    padding-bottom: 10px;
+    text-align: left;
+}
+
+/* Detaljer om produkten från db */
 .product_details {
-	text-align: center;
-	padding-top: 45px;
-	margin: 0 auto;
-	margin-bottom: 20px;
+	padding-top: 20px;
+	margin-bottom: 50px;
 	width: 75%;
 	line-height: 1.2em;
-	color: #807b74;
+    line-height: 1.5em;
+    text-align: left;
+    color: white;
+}
+
+/* Löpande brödtext om produkten från db */
+.product_details {
+    width: 60%;
     line-height: 1.5em;
 }
 
-.product_price {
-	font-size: 2em;
-	color: #807b74;
-    display: table;
-	margin: 0 auto;
-	margin-top: 10px;
-	text-align: center; 
-	padding-bottom: 10px;
-}
-
 form {
-    text-align: center;
     margin-top: 10px;
 }
 
+/* Text antal */
 label[for="cart_qty"] {
-    color: #807b74;
-    text-align: center;
+    color: #ffffff;
+    text-transform: uppercase;
+    margin-bottom: 2%; 
+    letter-spacing: 2px;
 }
 
+/* Fältet */
 #cart_qty {
-	padding: 5px;
-	margin: 0 auto;
-	display: block;
-	border: 1px solid #AE9266;
-    color: #5a5752;
-	width: 16%;
-	text-transform: uppercase;
-	text-align: center;
-    font-size: 1.5em;
+    width: 13%;
+    display: block;
+	border: 1px solid #ffffff;
+    color: #ffffff;
+    padding: 10px;
+    margin-top: 1.5%;
+
+    font-family: 'Lato'; 
+    font-size: 1em;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+input {
+    background-color: transparent;
 }
 
 #single-prod-button {
     width: 60%;
     color: white;
-    text-align: center;
-    background-color: rgba(174,146, 102, 1);
+    background-color: transparent;
     border: none;
     padding: 12px;
-    font-size: 1.3em;
+    font-size: 0.8em;
     margin-top: 18px;
+    text-transform: uppercase;
 }
 
 .product_single {
@@ -181,6 +195,40 @@ h2, h3, h4, p {
 }
 
 
+/* Ikoner för att dela på sociala medier */
+.share-prod {
+    margin-top: 3%;
+    margin-bottom: 60px;
+    width: 75%;
+}
+
+.share-prod #fb-font, #inst-font, #pint-font, #mail-font{
+    color: #807b74;
+    font-size: 1.5em;
+    font-family: 'millhouse-prod-share';
+    margin: 5px;
+}
+
+#fb-font::before {
+    content:'\66';
+}
+
+#inst-font::before {
+    content:'\69';
+}
+
+#pint-font::before {
+    content:'\70';
+}
+
+#mail-font::before {
+    content:'\6d';
+}
+
+hgroup> h2 {
+    padding-top: 10px;
+}
+
 /************* MEDIA QUERIES!!!! *********/
 
 /******* MEDIA QUERIES FÖR SKÄRM > 600px ************/
@@ -198,37 +246,20 @@ h2, h3, h4, p {
     hgroup> h2 {
     padding-top: 50px;
 }
-    .product_details {
-	width: 50%;
-   
-}
-    #single-prod-button{
-        width: 50%;
-    }
-
-      
-}
+ 
 
 /******* MEDIA QUERIES FÖR SKÄRM > 700px ************/
 
 @media (min-width: 700px) {
     .single_img_wrapper {
         display: inline;
-        float:left;
         width: 50%;
     }
-    
-    .share-prod {
-   margin-right: 2%;
-    width: 50%;
-}
-        .product_details {
-	margin-right: 2%;
-    line-height: 1.5em;
-   
-}
+
      #single-prod-button{
         width: 40%;
+        border: 1px solid #ffffff;
+
     }
       
 }
@@ -242,7 +273,7 @@ h2, h3, h4, p {
     }
     
     figure {
-        width: 420px;
+        width: 100%;
 }
     
       
@@ -255,62 +286,7 @@ h2, h3, h4, p {
 	.product_single {
 		width: 100%;
 	}
-	
-	.single_img_wrapper {
-		width: 30%;
-		display: inline-block;
-		margin-left: 20%;
-	}
-    
-    .share-prod {
-        margin-right: 15%;
-        width: 70%;
-}
-    
 
-	div.prod_info_wrapper {
-		width: 45%;
-		float: right;
-		margin-right: 5%;
-	}
-    
-    h2 {
-        float: none;
-        clear:both;
-    }
-
-	.product_title {
-		font-size: 2.5em;
-	}
-
-	.product_details {
-		width: 70%;
-        text-align: center;
-        margin-right:auto;
-        line-height: 1.5em;
-	}
-	
-	.product_price {
-		font-size: 2em;
-
-	}
-	
-	input {
-		padding: 10px;
-		font-size: 1em;
-	}
-	
-	.product_price {
-		display: table;
-
-	}
-
-	#single-prod-button {
-		font-size: 1em;
-		padding: 10px;
-        width: 50%;
-	}
-    
   
 }
     
