--- a/css/product_single.css
+++ b/css/product_single.css
@@ -10,8 +10,6 @@
   font-style: normal;
 }
 
-
-
 .overlay {
   position: fixed;
   top: 0;
@@ -77,7 +75,6 @@ a.button_2:hover {
   max-width: 100%;
 }
 
-
 .delivery_options {
     width: 100%;
     float: left;
@@ -129,7 +126,6 @@ div.goback > i {
     width: 50%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 5%; /* Håller avstånd till nästa innehåll */
     display: block;
 }
 
@@ -267,6 +263,43 @@ hgroup> h2 {
     padding-top: 10px;
 }
 
+
+/* Stor bild med doftfamiljen */
+
+
+#block {
+  width: 100%;
+  margin: 0;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  background-color: black;
+  margin-bottom: 3%;
+
+}
+
+#block > h1 {
+  text-align: center;
+  font-family: 'Lato';
+  font-size: 20px;
+  color: white;
+
+
+  text-transform: uppercase;
+  z-index: 3;
+}
+
+.scent-wheel {
+  max-width: 50%;
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
+
+}
+
+hr {
+  height: 0.2px;
+}
+
  /******* Liknande produkter *******/
 
 .product_upsale {
@@ -375,6 +408,12 @@ button:hover {
     -moz-transition: background-color 1s ease-out;
     -o-transition: background-color 1s ease-out;
     transition: background-color 1s ease-out;
+}
+
+.before_footer {
+  width: 100%;
+  color: red;
+
 }
 
 /************* MEDIA QUERIES!!!! *********/
