--- a/css/thank_you.css
+++ b/css/thank_you.css
@@ -1,17 +1,22 @@
-.thanks {
-    font-family: 'Open sans', sans-serif;
-    margin: 0 auto;
-        text-align: center;
+img.background_flowers {
+    max-width: 1000%;
+    height: 880px;
+    z-index: -1;
 }
 
-#thanks-img-div {
-    width: 100%;
-}
+.thank_you_wrapper {
+    width: 90%;
+    height: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white;
+    font-family: 'Lato';
 
-#thanks-logo {
-    height: 130px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    position: absolute;
+    top: 35%;
+    left: 0;
+    right: 0;
+    z-index: 1;
 }
 
 #thanks-h1 {
@@ -20,7 +25,7 @@
     width: 90%;
     text-transform: uppercase;
     font-size: 24px;
-    margin-top: 40px;
+    margin-top: 100px;
 }
 
 #thanks-p {
@@ -33,22 +38,6 @@
     font-size: 16px;
 }
 
-#to-store {
-    margin:0 auto;
-    margin-bottom:5%;
-	padding: 15px;
-	background-color: #AE9266;
-	border: none;
-	width: 90%;
-	font-size: 1.2em;
-	text-transform: uppercase;
-    max-width: 500px;
-    cursor: pointer;
-    }
-
-#to-store > a {
-	color: white;
-    }
 
 @media all and (min-width:700px){
     
