--- a/css/startpage.css
+++ b/css/startpage.css
@@ -20,9 +20,9 @@ body {
 
 /* Liten gul banner under headern */
 .small_banner {
-    width: 100%;
-    max-width: 1663px;
-    background-color: #f0bb29;
+    width: 105%;
+    max-width: 1680px;
+    background-color: #1a3b6e; /* blå 1a3b6e*/ /*krämvit #ccd1d1*/
     text-align: center;
     color: white;
     padding: 0.5%;
@@ -39,7 +39,7 @@ body {
 /* Css för toppbild */
 .startpage_bigimage {
     width: 100%;
-    height: 950px;
+    height: 1150px;
     margin: auto;
     display: flex;
     flex-direction: column;
