--- a/css/admin/admin_orders.css
+++ b/css/admin/admin_orders.css
@@ -1,4 +1,4 @@
-* {
+/** {
     font-family: 'Open sans', sans-serif;
 }
 
@@ -98,4 +98,4 @@
     width:40%;
     margin: 0 auto;
     margin-top: 10px;
-}
+}*/
