--- a/css/storefront/startpage.css
+++ b/css/storefront/startpage.css
@@ -36,10 +36,22 @@ body {
     height: auto;
 }
 
+.main_wrapper_startpage {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: auto;
+    justify-content: space-between;
+    margin: 0 auto;
+    overflow: hidden;
+    margin-right: 6%;
+    margin-left: 6%;
+}
+
 /* Css för toppbild */
 .startpage_bigimage {
     width: 100%;
-    height: 1150px;
+    height: 1100px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -47,12 +59,13 @@ body {
     /*margin-bottom: 25px;*/
     position: relative;
     z-index: -1;
-    margin-top: -220px; /* För att ta bort extra px från menyn*/
+    margin-top: -15%; /* För att ta bort extra px från menyn*/
+    margin-bottom: -1.5%;
 }
 
 .topimage {
     max-width: 100%;
-    max-height: 950px;
+    max-height: 1150px;
     object-fit: cover;
 }
 
@@ -64,7 +77,7 @@ button#create {
     border: 2px solid white;
     width: 30%;
     position: absolute;
-    top: 45%;
+    top: 50%;
     right: 0%;
     left: 0%;
 
@@ -305,21 +318,22 @@ Uppdelad i två block, en med bildkollage och en med bara text */
     color: white;
     text-align: center;
     margin-top: 12%;
-    margin-right: 5%;
+    margin-right: 4%;
     flex: 0 0 60%; 
+    font-size: 19px;
 }
 
 /* knapp för att ansöka */
 button#ansok {
+    width: 25%;
     margin: 0 auto;
     padding: 10px;
-    background-color: transparent;
     border: 2px solid white;
     color: white;
     font-size: 13px;
     text-decoration: none;
     cursor: pointer;
-    width: 25%;
+    margin-top: 4%;
 }
 
 #ansok:hover { 
@@ -335,6 +349,7 @@ button#ansok {
     background-color: #000000; 
     text-align: center;
     margin-top: 0.5%;
+    margin-bottom: 10%;
 }
 
 #leafs {
